# CV_takehome_challenge

./: CMakeLists.txt  README.md  main.cpp  ply_stream.hpp  pt_cloud.ply  view_coverage_polygons.ply
